<resources>
    <string name="app_name">PsycEx</string>
    <string name="app_name1">ActionBar</string>
    <string name="action_share">Share</string>
    <string name="action_search">Search Meow Meow</string>
    <string name="action_save"> Save</string>
    <string name="action_record">Record Video</string>
    <string name="action_label">CopyRights</string>
    <string name="action_play">Play Video</string>
    <string name="hello_world">Hello world!</string>

    <!-- The name of the application. -->
    <string name="dictionary_name">PsycEx Dictionary</string>

    <!-- The label for use as a searchable item -->
    <string name="search_label">PsyEx Dictionary</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search the PsycEx dictionary</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search the PsycEx dictionary</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of Pyschological terms</string>

    <!-- General instructions in the main activity. -->
    <!--<string name="search_instructions">Use the search box in the Action Bar to look up a word</string>-->
    <string name="search_instructions">Click on Search icon to look up Psychological terms</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>


    <!--<string-array name="studiesAndExperimentsNamesArray">
        <item>Android</item>
        <item>Java</item>
        <item>Php</item>
        <item>Hadoop</item>
        <item>Sap</item>
        <item>Python</item>
        <item>Ajax</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>.Net</item>
        <item>Perl</item>
    </string-array>-->

</resources>
