<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <item android:id="@+id/actionbar_share"
        android:icon="@drawable/icon_share_more_48"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item android:id="@+id/action_record"
        android:icon="@drawable/calendar"
        android:title="@string/action_record"
        app:showAsAction="never" />
    <item android:id="@+id/action_save"
        android:icon="@drawable/calendar"
        android:title="@string/action_save"
        app:showAsAction="never" />
    <item android:id="@+id/action_label"
        android:icon="@drawable/calendar"
        android:title="@string/action_label"
        app:showAsAction="never" />
    <item android:id="@+id/action_play"
        android:icon="@drawable/calendar"
        android:title="@string/action_play"
        app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_share"
        app:showAsAction="never" />
</menu>